--- a/EvidenceCapture/Properties/Resources.resx
+++ b/EvidenceCapture/Properties/Resources.resx
@@ -129,6 +129,12 @@
   <data name="CancelButton" xml:space="preserve">
     <value>キャンセル</value>
   </data>
+  <data name="ChangeButton" xml:space="preserve">
+    <value>変更</value>
+  </data>
+  <data name="CloseButton" xml:space="preserve">
+    <value>閉じる</value>
+  </data>
   <data name="CreateButton" xml:space="preserve">
     <value>作成</value>
   </data>
@@ -147,6 +153,21 @@
   <data name="FormatPDF" xml:space="preserve">
     <value>PDF</value>
   </data>
+  <data name="GroupRenameCaption" xml:space="preserve">
+    <value>変更後のグループを指定してください</value>
+  </data>
+  <data name="GroupRenameOption" xml:space="preserve">
+    <value>下位グループをリセットする</value>
+  </data>
+  <data name="GroupRenameTitle" xml:space="preserve">
+    <value>グループ名の変更</value>
+  </data>
+  <data name="LaunchDirButton" xml:space="preserve">
+    <value>フォルダを開く</value>
+  </data>
+  <data name="LaunchFileButton" xml:space="preserve">
+    <value>ファイルを起動する</value>
+  </data>
   <data name="LaunchReportDialogToolTip" xml:space="preserve">
     <value>レポートを出力する</value>
   </data>
@@ -155,6 +176,13 @@
   </data>
   <data name="ReportDialogTitle" xml:space="preserve">
     <value>レポート出力</value>
+  </data>
+  <data name="ReportFinishCaption" xml:space="preserve">
+    <value>レポートを出力しました。
+出力先={0}</value>
+  </data>
+  <data name="ReportFinishTitle" xml:space="preserve">
+    <value>レポート出力が完了しました</value>
   </data>
   <data name="SelectFormatCaption" xml:space="preserve">
     <value>出力するフォーマットを選択し、作成ボタンをおしてください。</value>
