Webカメラ連携とNlog出力を追加

--- a/EvidenceCapture/Properties/LogMessage.resx
+++ b/EvidenceCapture/Properties/LogMessage.resx
@@ -117,162 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddGroupToolTip" xml:space="preserve">
-    <value>グループの追加</value>
+  <data name="DParams" xml:space="preserve">
+    <value>{0} = {1}</value>
   </data>
-  <data name="AppliactionSettingControlTooltip" xml:space="preserve">
-    <value>アプリケーション設定</value>
+  <data name="ECameraNotFound" xml:space="preserve">
+    <value>The camera not found</value>
   </data>
-  <data name="AppTitle" xml:space="preserve">
-    <value>EvidenceCapture</value>
+  <data name="EFileNotFound" xml:space="preserve">
+    <value>"{0}" file is not found.</value>
   </data>
-  <data name="AutoResizeToolTip" xml:space="preserve">
-    <value>自動リサイズを有効にする</value>
-  </data>
-  <data name="CancelButton" xml:space="preserve">
-    <value>キャンセル</value>
-  </data>
-  <data name="ChangeButton" xml:space="preserve">
-    <value>変更</value>
-  </data>
-  <data name="CloseButton" xml:space="preserve">
-    <value>閉じる</value>
-  </data>
-  <data name="CreateButton" xml:space="preserve">
-    <value>作成</value>
-  </data>
-  <data name="FixHeight" xml:space="preserve">
-    <value>高さ変更</value>
-  </data>
-  <data name="FixWidth" xml:space="preserve">
-    <value>幅変更</value>
-  </data>
-  <data name="FormatExcel" xml:space="preserve">
-    <value>Excel</value>
-  </data>
-  <data name="FormatHTML" xml:space="preserve">
-    <value>HTML</value>
-  </data>
-  <data name="FormatPDF" xml:space="preserve">
-    <value>PDF</value>
-  </data>
-  <data name="GroupRenameCaption" xml:space="preserve">
-    <value>変更後のグループを指定してください</value>
-  </data>
-  <data name="GroupRenameOption" xml:space="preserve">
-    <value>下位グループをリセットする</value>
-  </data>
-  <data name="GroupRenameTitle" xml:space="preserve">
-    <value>グループ名の変更</value>
-  </data>
-  <data name="LaunchDirButton" xml:space="preserve">
-    <value>フォルダを開く</value>
-  </data>
-  <data name="LaunchFileButton" xml:space="preserve">
-    <value>ファイルを起動する</value>
-  </data>
-  <data name="LaunchReportDialogToolTip" xml:space="preserve">
-    <value>レポートを出力する</value>
-  </data>
-  <data name="Location" xml:space="preserve">
-    <value>座標</value>
-  </data>
-  <data name="OkButton" xml:space="preserve">
-    <value>OK</value>
-  </data>
-  <data name="OperateControlTooltip" xml:space="preserve">
-    <value>スナップショットキャプチャ</value>
-  </data>
-  <data name="ReportDialogTitle" xml:space="preserve">
-    <value>レポート出力</value>
-  </data>
-  <data name="ReportFinishCaption" xml:space="preserve">
-    <value>レポートを出力しました。
-出力先={0}</value>
-  </data>
-  <data name="ReportFinishTitle" xml:space="preserve">
-    <value>レポート出力が完了しました</value>
-  </data>
-  <data name="SelectFormatCaption" xml:space="preserve">
-    <value>出力するフォーマットを選択し、作成ボタンをおしてください。</value>
-  </data>
-  <data name="SetFolderToolTip" xml:space="preserve">
-    <value>出力先フォルダの設定</value>
-  </data>
-  <data name="Size" xml:space="preserve">
-    <value>サイズ</value>
-  </data>
-  <data name="TrimTooltip" xml:space="preserve">
-    <value>トリミング</value>
-  </data>
-  <data name="ApplyButton" xml:space="preserve">
-    <value>適用</value>
-  </data>
-  <data name="ImageFormatBmp" xml:space="preserve">
-    <value>bmp型式</value>
-  </data>
-  <data name="ImageFormatJpg" xml:space="preserve">
-    <value>jpeg型式</value>
-  </data>
-  <data name="ImageFormatPng" xml:space="preserve">
-    <value>png型式</value>
-  </data>
-  <data name="ImageSettingExpander" xml:space="preserve">
-    <value>スナップショット書式</value>
-  </data>
-  <data name="KeySettingExpander" xml:space="preserve">
-    <value>キーショートカット</value>
-  </data>
-  <data name="KeyShortCutApplicationCap" xml:space="preserve">
-    <value>アクティブウインドウキャプチャー</value>
-  </data>
-  <data name="KeyShortCutG1" xml:space="preserve">
-    <value>グループ追加(レベル1)</value>
-  </data>
-  <data name="KeyShortCutG2" xml:space="preserve">
-    <value>グループ追加(レベル2)</value>
-  </data>
-  <data name="KeyShortCutG3" xml:space="preserve">
-    <value>グループ追加(レベル3)</value>
-  </data>
-  <data name="KeyShortCutScreenCap" xml:space="preserve">
-    <value>スクリーンキャプチャー</value>
-  </data>
-  <data name="SnapShotFormatHeight" xml:space="preserve">
-    <value>リサイズのデフォルト(高さ)</value>
-  </data>
-  <data name="SnapShotFormatOutFormat" xml:space="preserve">
-    <value>出力フォーマット</value>
-  </data>
-  <data name="SnapShotFormatWidth" xml:space="preserve">
-    <value>リサイズのデフォルト(幅)</value>
-  </data>
-  <data name="IsWindowCapture" xml:space="preserve">
-    <value>ウインドウも含める</value>
-  </data>
-  <data name="IsWindowCaptureLabel" xml:space="preserve">
-    <value>アクティブウインドウキャプチャ範囲</value>
-  </data>
-  <data name="HIghlightTooltip" xml:space="preserve">
-    <value>ハイライト</value>
-  </data>
-  <data name="MaskTooltip" xml:space="preserve">
-    <value>マスキング</value>
-  </data>
-  <data name="ApplogTooltip" xml:space="preserve">
-    <value>アプリケーションログフォルダを開く</value>
-  </data>
-  <data name="WebCamSettingTooltip" xml:space="preserve">
-    <value>Webカメラの設定と確認</value>
-  </data>
-  <data name="CameraNotFound" xml:space="preserve">
-    <value>カメラが一つも見当たりません</value>
-  </data>
-  <data name="KeyShortCutCameraCap" xml:space="preserve">
-    <value>カメラキャプチャー</value>
-  </data>
-  <data name="WebCamNotFound" xml:space="preserve">
-    <value>Webカメラが認識できませんでした。
-カメラのキャプチャは利用できません。</value>
+  <data name="ISuccess" xml:space="preserve">
+    <value>{0} is Succeeded.</value>
   </data>
 </root>
