・フォルダ選択ダイアログを変更 ・ドラッグアンドでフォルダ指定可能に ・Excel生成時にリンクは辞める

--- a/EvidenceCapture/Properties/Resources.resx
+++ b/EvidenceCapture/Properties/Resources.resx
@@ -275,4 +275,7 @@
     <value>Webカメラが認識できませんでした。
 カメラのキャプチャは利用できません。</value>
   </data>
+  <data name="GroupPattern" xml:space="preserve">
+    <value>グループ表現</value>
+  </data>
 </root>
